feature/wise-109 - Adjusted consultation CRUD